# celestial-insight

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
celestial_insight/: agents.py  api.py  asgi.py  settings.py  urls.py  wsgi.py
mentors/: admin.py  api.py  models.py  schemas.py
mentors/fixtures/: mentor_data.json  mentors_data.json
mentors/migrations/: 0001_initial.py  0002_mentor_slug.py
tarot/: admin.py  api.py  choices.py  enums.py  filters.py  models.py  schemas.py  utils.py  validators.py
tarot/agents/: celestial_agent.py  common.py  tarot_support_agent.py
tarot/fixtures/: example_cards.json  tarot_cards.json  tarot_data.json  updated_tarot_data.json
tarot/migrations/: 0001_initial.py  0002_readingcard_user.py  0003_remove_readingcard_user_reading_user.py  0004_reading_celestial_insight.py  0005_suit_arcana.py  0006_alter_card_options_alter_readingcard_options_and_more.py  0007_alter_card_number_alter_reading_celestial_insight.py  0008_readingcard_role.py  0009_remove_suit_color_card_slug_reading_mentor.py
tarot/services/: card_service.py  reading_service.py
users/: admin.py  api.py  models.py  schemas.py
users/migrations/: 0001_initial.py  0002_userprofile_preferred_mentor.py
